# helicity_decoder

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.org  hdFirmwareTools.c  hdFirmwareTools.h  hdLib.c  hdLib.h
firmware/: Makefile  hdFirmwareUpdate.c
fromEd/: epcq_3.c
rol/: Makefile  hd_list.c
systemd/: Makefile  hdConfigure.c  hd_init.service  hd_init.sh
test/: Makefile  hdInit.c  hdReadoutTest.c  hdStatus.c  hdTestFP.c  hdTestVXS.c  readline_menu.h
